Added solution to 3.7 and updated the makefile to compile it.

--- a/week3/Makefile
+++ b/week3/Makefile
@@ -5,7 +5,10 @@
 listchange:	listchange.c
 	gcc -Wall -ansi -o listchange listchange.c
 
-it:		listchange
+convert:	convert.c
+	gcc -Wall -ansi -o convert convert.c
+
+it:		listchange convert
 
 so:
 	./testchange.sh
