Added a new functionn sumfactors. It is defined in a separate file, since it will be useful for finding amicable pairs as well

--- a/week5/Makefile
+++ b/week5/Makefile
@@ -5,8 +5,11 @@
 CC=gcc
 CFLAGS=-Wall -ansi
 
-perfect:	perfect.o
-	$(CC) $(CFLAGS) -o perfect perfect.o
+perfect:	perfect.o sumfactors.o
+	$(CC) $(CFLAGS) -o perfect perfect.o sumfactors.o
+
+perfect.o:	perfect.c sumfactors.h
+sumfactors.o:	sumfactors.c sumfactors.h
 
 me a:
 
