Created a program to test if two numbers are amicable pairs. Note that this program usees the sumfactors function that was created for the perfect numbers problem.

--- a/week5/Makefile
+++ b/week5/Makefile
@@ -8,8 +8,12 @@ CFLAGS=-Wall -ansi
 perfect:	perfect.o sumfactors.o
 	$(CC) $(CFLAGS) -o perfect perfect.o sumfactors.o
 
+amicable:	amicable.o sumfactors.o
+	$(CC) $(CFLAGS) -o amicable amicable.o sumfactors.o
+
 perfect.o:	perfect.c sumfactors.h
 sumfactors.o:	sumfactors.c sumfactors.h
+amicable.o:	amicable.c sumfactors.h
 
 me a:
 
