Random input generator works in that it doesn't crash or fail to compile, but some of the polygons it comes up with do not seem to be clockwise.
I think it might be more worthwile to hand generate some test cases...

--- a/project1/Makefile
+++ b/project1/Makefile
@@ -3,9 +3,12 @@
 # compile multiple files or anything.
 
 CC = gcc
-CFLAGS = -Wall -ansi
+CFLAGS = -Wall 
 
 polygons:		polygons.o
 	$(CC) $(CFLAGS) -o polygons polygons.o -lm
+
+random_input:		random_input.o
+	$(CC) $(CFLAGS) -o random_input random_input.o
 
 # vim: ts=8 sw=4 noet
