Added solution for problem 7.7, a function that returns the most common value in an array.
Also modified the makefile so that both programs are built with a single
make command.

--- a/week8/Makefile
+++ b/week8/Makefile
@@ -3,7 +3,14 @@
 CC=gcc
 CFLAGS=-Wall -ansi
 
+all:		freq popular
+
 freq:		histogram.o
 	$(CC) $(CFLAGS) -o freq histogram.o
+
+popular:	popular.o
+	$(CC) $(CFLAGS) -o popular popular.o
+
+.PHONY:		all
 
 # vim: ts=8 sw=4 noet
