Implemented stage 3, listing the averages over different categories.
Also added a tags target to the makefile; at 740 LOC, I *need* cscope to
properly navigate this jumbo source file!

--- a/project2/Makefile
+++ b/project2/Makefile
@@ -11,4 +11,9 @@ csv-analyse:		csv-analyse.o
 random_input:		random_input.o
 	$(CC) $(CFLAGS) -o random_input random_input.o
 
+tags:
+	cscope -b
+
+.PHONY:			tags
+
 # vim: ts=8 sw=4 noet
