Added main function, and fixed bugs. Program now accepts 100 ints from the user (and works, too).
I got the direction of two cmp signs wrong in adjdacent_sum, fixed in this
commit.

Also added clean target to the makefile, and set the debugging and
profiling compile flags (while hunting for aforementioned bug).

--- a/week12/Makefile
+++ b/week12/Makefile
@@ -1,14 +1,20 @@
 # Compiles and tests the solutions to week 8 lab exercises.
 
 CC=gcc
-CFLAGS=-Wall -ansi
+CFLAGS=-Wall -ansi -O0 -g -pg
 
 all:		adjacent-sum
 
 adjacent-sum:	adjacent-sum.o
 	$(CC) $(CFLAGS) -o adjacent-sum adjacent-sum.o
 
+clean:
+	rm adjacent-sum.o
 
-.PHONY:		all
+scrub:		clean
+	rm adjacent-sum
+
+
+.PHONY:		all clean scrub
 
 # vim: ts=8 sw=4 noet
