Added main function, fixed two bugs: The empty_pack function was returning the wrong logic (false instead of true and vice versa), fixed by changing its cmp operator, and in print_card, the index used for the face_values lookup table needed to be between 0 and 13, not 0 and 52.
Also added poker.c to the makefile.

--- a/week12/Makefile
+++ b/week12/Makefile
@@ -1,18 +1,21 @@
 # Compiles and tests the solutions to week 8 lab exercises.
 
 CC=gcc
-CFLAGS=-Wall -ansi -O0 -g -pg
+CFLAGS=-Wall -ansi 
 
-all:		adjacent-sum
+all:		adjacent-sum poker
 
 adjacent-sum:	adjacent-sum.o
 	$(CC) $(CFLAGS) -o adjacent-sum adjacent-sum.o
 
+poker:		poker.o
+	$(CC) $(CFLAGS) -o poker poker.o
+
 clean:
-	rm adjacent-sum.o
+	rm adjacent-sum.o poker.o
 
 scrub:		clean
-	rm adjacent-sum
+	rm adjacent-sum poker
 
 
 .PHONY:		all clean scrub
