Working solution to 9.11
Fixed a bug in the drag function; it would return nan if velocity was zero,
because of a 0/0 error when I tried to get the sign of the velocity. Fixed
by explicitly testing if the velocity is positive or negative.

Also added functions for thrust force, acceleration, and a constant for
gravitational acceleration. Constants also have their units shown next to
them.

Added the rocket simulator to the makefile.

--- a/week12/Makefile
+++ b/week12/Makefile
@@ -3,7 +3,7 @@
 CC=gcc
 CFLAGS=-Wall -ansi 
 
-all:		adjacent-sum poker
+all:		adjacent-sum poker rocket
 
 adjacent-sum:	adjacent-sum.o
 	$(CC) $(CFLAGS) -o adjacent-sum adjacent-sum.o
@@ -11,11 +11,14 @@ adjacent-sum:	adjacent-sum.o
 poker:		poker.o
 	$(CC) $(CFLAGS) -o poker poker.o
 
+rocket:		rocket.o
+	$(CC) $(CFLAGS) -o rocket rocket.o
+
 clean:
-	rm adjacent-sum.o poker.o
+	rm adjacent-sum.o poker.o rocket.o
 
 scrub:		clean
-	rm adjacent-sum poker
+	rm adjacent-sum poker rocket
 
 
 .PHONY:		all clean scrub
